using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace MyInputManager_ver1{
    public interface I_InputDataAddable {
        public abstract void SetInputData(E_InputType type);
    }
}
